@@ -1,3 +1,4 @@
+Add new socket code to try and support InfiniBand better.
 Support RFC 3361 SIP Servers.
 We now do ARP checking by default as recommended by RFC 2131.
 Add RFC 3927 (aka IPV4LL aka APIPA) support by default.
